<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.alien.examples</groupId>
	<artifactId>example-webdriver</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<test.runner>**/RunWebTest.java</test.runner>
		<parallel.test.runners>**/parallel/**/Run*WebTest.java</parallel.test.runners>

        <skip.acceptance.test>false</skip.acceptance.test>
        <show.screenshots>false</show.screenshots>
		<cukes.forkCount>0</cukes.forkCount>
		<cukes.reuseForks>true</cukes.reuseForks>
		<!-- <target.directory>/Users/andypaton/eclipse-workspace/test-maven-project/target</target.directory> -->

		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
	</properties>

	<dependencies>

		<dependency>
			<groupId>com.alien.utils</groupId>
			<artifactId>common-utils-report</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>com.alien.utils</groupId>
			<artifactId>common-utils-webdriver</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>


		<!-- SPRINGFRAMEWORK -->

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>5.0.0.RELEASE</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>5.0.0.RELEASE</version>
		</dependency>

		<!-- CUCUMBER -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.1.5</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>1.1.5</version>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm</artifactId>
			<version>1.1.5</version>
			<type>pom</type>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.1.5</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-spring</artifactId>
			<version>1.1.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.cobertura</groupId>
			<artifactId>cobertura</artifactId>
			<version>2.1.1</version>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm-deps</artifactId>
			<version>1.0.5</version>
		</dependency>
		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>1.0.0</version>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>gherkin</artifactId>
			<version>2.12.2</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>2.0.2-beta</version>
		</dependency>

	</dependencies>

	<profiles>
		<profile>
			<id>firefox-test</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<webdriver>firefox</webdriver>
				<skip.acceptance.test>false</skip.acceptance.test>
				<acceptanceTest.runner>${test.runner}</acceptanceTest.runner>
			</properties>
		</profile>

		<profile>
			<id>chrome-test</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<webdriver>chrome</webdriver>
				<skip.acceptance.test>false</skip.acceptance.test>
				<acceptanceTest.runner>${test.runner}</acceptanceTest.runner>
			</properties>
		</profile>
		
		<profile>
            <id>phantom-test</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <webdriver>phantom</webdriver>
                <skip.acceptance.test>false</skip.acceptance.test>
                <acceptanceTest.runner>${test.runner}</acceptanceTest.runner>
                <show.screenshots>true</show.screenshots>
            </properties>
        </profile>

		<profile>
			<id>parallel-chrome-tests</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<webdriver>chrome</webdriver>
				<skip.acceptance.test>false</skip.acceptance.test>
				<cukes.forkCount>2</cukes.forkCount>
				<cukes.reuseForks>true</cukes.reuseForks>
				<acceptanceTest.runner>${parallel.test.runners}</acceptanceTest.runner>
			</properties>
		</profile>

	</profiles>


	<build>

		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.groovy.maven
										</groupId>
										<artifactId>
											gmaven-plugin
										</artifactId>
										<versionRange>
											[1.0,)
										</versionRange>
										<goals>
											<goal>execute</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>

			<!-- SUREFIRE : RUN UNIT TESTS -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20.1</version>
				<configuration>
					<excludes>
						<exclude>**/*Run*Test.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- FAILSAFE : RUN INTEGRATION TESTS -->

			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-failsafe-plugin</artifactId> 
				<version>2.16</version> <configuration> <failIfNoTests>false</failIfNoTests> 
				<argLine>-XX:MaxPermSize=512m -Xms256M -Xmx1024m -XX:+UseConcMarkSweepGC 
				-XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+CMSClassUnloadingEnabled 
				</argLine> </configuration> <executions> <execution> <configuration> <skip>${skip.acceptance.test}</skip> 
				<includes> <include>${acceptanceTest.runner}</include> </includes> <systemProperties> 
				<systemProperty> <key>web.driver</key> <value>${web.driver}</value> </systemProperty> 
				</systemProperties> </configuration> <id>cucumber-integration-test</id> <goals> 
				<goal>integration-test</goal> <goal>verify</goal> </goals> </execution> </executions> 
				</plugin> -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.20.1</version>
				<configuration>
					<skip>${skip.acceptance.test}</skip>
					<failIfNoTests>true</failIfNoTests>
					<argLine>-XX:MaxPermSize=512m -Xms256M -Xmx1536m
						-XX:+UseConcMarkSweepGC -XX:+UseParNewGC
						-XX:+CMSParallelRemarkEnabled
						-XX:+CMSClassUnloadingEnabled</argLine>
					<systemPropertyVariables>
                        <web.driver>${webdriver}</web.driver>
                        <screenshots>${show.screenshots}</screenshots>
                        <fork.number>$${surefire.forkNumber}</fork.number>
                    </systemPropertyVariables>
                    <additionalClasspathElements>
                    <additionalClasspathElement>
                    ${basedir}/target/classes
                    </additionalClasspathElement>
                    </additionalClasspathElements>
				</configuration>
				<executions>
					<execution>
						<configuration>
							<failIfNoTests>true</failIfNoTests>
							<includes>
								<include>${acceptanceTest.runner}</include>
							</includes>
							<forkCount>${cukes.forkCount}</forkCount>
							<reuseForks>${cukes.reuseForks}</reuseForks>
							<systemProperties>
								<systemProperty>
									<key>web.driver</key>
									<value>${web.driver}</value>
								</systemProperty>
							</systemProperties>
						</configuration>
						<id>cucumber-acceptance-test</id>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
            <!--Extract common-utils-webdriver's resources-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>unpack</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeGroupIds>com.alien.utils</includeGroupIds>
                            <includeArtifactIds>common-utils-webdriver</includeArtifactIds>
                            <excludeTransitive>true</excludeTransitive>
                            <overWrite>true</overWrite>
                            <outputDirectory>${project.build.directory}/webdriver-resources</outputDirectory>
                            <excludes>org/**,META-INF/**</excludes>
                            <overWriteReleases>true</overWriteReleases>
                            <overWriteSnapshots>true</overWriteSnapshots>
                        </configuration>
                    </execution>
                </executions>
            </plugin>	

			<!-- GENERATE CUCUMBER REPORT MATCHING JENKINS PLUGIN -->

			<plugin>
				<groupId>net.masterthought</groupId>
				<artifactId>maven-cucumber-reporting</artifactId>
				<version>3.11.0</version>
				<executions>
					<execution>
						<id>default-cli</id>
						<phase>verify</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<cucumberOutput>${project.build.directory}/report/cucumber/report.json</cucumberOutput>
							<outputDirectory>${project.build.directory}/cucumber-html-reports</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>

        <!-- Add webdriver resource location -->
        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>${project.build.directory}/webdriver-resources</directory>
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>${basedir}/src/main/resources</directory>
            </resource>
        </resources>
	</build>

</project>
